# googletest_template

./: README.md
tdd_template/: CMakeLists.txt  main.cc
tdd_template/inc/: class_a.h
tdd_template/src/: class_a.cc
tdd_template/tests/: class_a_test.cc
